need to add decorator

--- a/templates/employee/delete.html
+++ b/templates/employee/delete.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
 
-</body>
-</html>
+{% extends 'polls/base.html' %}
+
+
+{% block content %}
+<br>
+    <h2>{{user.first_name}} &nbsp; {{user.last_name}}</h2>
+    <form method="post">
+        {% csrf_token %}
+        <p>Are you sure to delete this Employee?</p>
+        <input type="submit" value="Yes">
+    </form>
+{% endblock content %}
