--- a/templates/employee/details.html
+++ b/templates/employee/details.html
@@ -25,5 +25,8 @@
         </tr>
     </tbody>
     </table>
-
+<div class="text-right">
+    <a class="btn btn-warning" href="{% url 'employee_edit' user.id %}">Edit</a>
+    <a class="btn btn-danger" href="{% url 'employee_delete' user.id %}">Delete</a>
+    </div>
 {% endblock content %}
