--- a/templates/employee/edit.html
+++ b/templates/employee/edit.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'polls/base.html' %}
 
-</body>
-</html>
+
+{% block content %}
+<br>
+    <form method="POST">
+        {% csrf_token %}
+        <table class="table table-bordered table-light">
+            {{user_form.as_table}}
+        </table>
+        <br>
+        <button type="submit" class="btn btn-warning float-right">Update Employee</button>
+    </form>
+{% endblock content %}
