--- a/templates/employee/index.html
+++ b/templates/employee/index.html
@@ -1,27 +1,47 @@
 {% extends 'polls/base.html' %}
 
 {% block content %}
+<div class="row">
+        <div class="col-sm-8">
+        <p>
+            <div class="float-left"><h3>List of {{title}}</h3></div>
+            {% if request.role == "Admin" %}
+            <a class="btn btn-success float-right" href="/employee/add/"> Add Employee</a>
+            {% endif %}
+        </p>
 
-<a href="/employee/add/"> Add Employee</a>
+    <div class="table-responsive-sm">
+    {% if users %}
+            <table class="table table-bordered">
+                <thead class="thead-light">
+                    <tr>
+                        <th>Name</th>
+                        <th class="text-center">Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+            {% for user in users %}
+                    <tr>
+                        <th scope="row">
+                            {{user.first_name}} {{user.last_name}}
+                            <span class="badge badge-default">{{user.email}}</span>
+                        </td>
+                        <td class="text-center">
+                            <a class="btn btn-primary" href="{% url 'employee_details' user.id %}">Details</a>
+                            <a class="btn btn-warning" href="{% url 'employee_edit' user.id %}">Edit</a>
+                            <a class="btn btn-danger" href="{% url 'employee_delete' user.id %}">Delete</a>
 
-<h2> List of {{title}}</h2>
+                        </td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
 
-{% if users %}
+        {% else %}
+            <p> There are no employees</p>
+    {% endif %}
 
-    <ul>
-        {% for user in users %}
-        <li>
-            {{user.first_name}} &nbsp; {{user.last_name}}
-            <a href="/employee/{{user.id}}/details/">Details</a>
-            <a href="/employee/{{user.id}}/Edit/">Edit</a>
-            <a href="/employee/{{user.id}}/delete/">Delete</a>
-
-
-        </li>
-        {% endfor %}
-
-    </ul>
-    {% else %}
-        <p> There are no employees</p>
-{% endif %}
+        </div>
+    </div>
+</div>
 {% endblock content %}
