--- a/templates/header.html
+++ b/templates/header.html
@@ -1,3 +1,4 @@
+{% load poll_extras %}
 <div class="navbar navbar-expand-lg navbar-light bg-light">
     <span class="navbar-brand mb-0 h1">EMS</span>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -7,13 +8,13 @@
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'employee_list'%}">
-                    Employee
+                    {{"employee" | capfirst}}
                     <span class="badge badge-primary badge-pill ">{{emp_count}}</span>
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'polls_list' %}">
-                    Polls
+                    {{"Polls" | upper}}
                     <span class="badge badge-primary badge-pill ">{{polls_count}}</span>
                 </a>
             </li>
@@ -24,7 +25,7 @@
 
             <form method="POST" action="/logout/">
             {%csrf_token%}
-            <a href="#">{{request.role}}</a>
+            <a href="{% url 'my_profile' %}">{{request.user.first_name}}</a>
             <input type="submit" class="btn btn-danger" value="logout">
             </form>
         </div>
