added poll details

--- a/templates/employee/index.html
+++ b/templates/employee/index.html
@@ -22,7 +22,7 @@
                 <tbody>
             {% for user in users %}
                     <tr>
-                        <th scope="row">
+                        <td scope="row">
                             {{user.first_name}} {{user.last_name}}
                             <span class="badge badge-default">{{user.email}}</span>
                         </td>
