--- a/templates/polls/index.html
+++ b/templates/polls/index.html
@@ -11,6 +11,7 @@
                 <thead class="thead-light">
                     <tr>
                         <th>Poll</th>
+                        <th class="text-center">Actions</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -19,6 +20,12 @@
                         <th scope="row">
                             <a class="list-group-item" href="{% url 'polls_details' question.id%}" >{{question.title }} </a>
                         </th>
+                        <td class="text-center">
+                            <a class="btn btn-primary" href="{% url 'polls_details' question.id %}">Details</a>
+                            <a class="btn btn-warning" href="{% url 'poll_edit' question.id %}">Edit</a>
+                            <a class="btn btn-danger" href="{% url 'poll_delete' question.id %}">Delete</a>
+
+                        </td>
 
                     </tr>
                 {% endfor %}
