--- a/templates/polls/index.html
+++ b/templates/polls/index.html
@@ -3,6 +3,7 @@
 {% block content %}
     <p>
         <h3>List of {{title}}</h3>
+        <a class="btn btn-success float-right" href="/poll/add/"> Add Poll</a>
     </p>
 
     <div class="table-responsive-sm">
